Add extension to allow the rendered videos to be played.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,8 @@
 				"ms-python.python",
 				"ms-python.vscode-pylance",
 				"Rickaym.manim-sideview",
-				"Equinusocio.vsc-material-theme"
+				"Equinusocio.vsc-material-theme",
+				"analytic-signal.preview-mp4"
 			]
 		}
 	},
