--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,6 +2,9 @@ FROM manimcommunity/manim
 
 USER root
 
-RUN sudo apt-get install xdg-open
+RUN apt-get update \
+    && apt-get install --no-install-recommends -y \
+    xdg-utils \
+    vlc
 
 USER manimuser
