--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,8 +8,8 @@
 	"customizations": {
 		"vscode": {
 			"settings": { 
-				"terminal.integrated.defaultProfile.linux": "zsh",
-				"workbench.colorTheme": "Community Material Theme High Contrast"
+				"terminal.integrated.defaultProfile.linux": "fish"
+				// "workbench.colorTheme": "Community Material Theme High Contrast"
 			},
 			"extensions": [
 				"ms-python.python",
