--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,4 +5,7 @@ USER root
 RUN apt-get update \
     && apt-get install --no-install-recommends -y \
     xdg-utils \
-    vlc
+    vlc \
+    fish 
+
+USER manimusr
