--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM manimcommunity/manim:latest
+FROM manimcommunity/manim
 
 USER root
 
@@ -6,6 +6,6 @@ RUN apt-get update \
     && apt-get install --no-install-recommends -y \
     xdg-utils \
     vlc \
-    fish 
+    fish
 
-USER manimusr
+USER manimuser
